All notable changes to this project will be documented in this file.

This project adheres to Semantic Versioning.

- Unreleased

- v1.4.1 - 2022-07-12
  - Fixed
    - Lua errors when attempting to automatically abandon quests

- v1.4.0 - 2022-07-12
  - Changed
    - Automation options are now character specific
    - Updated the quest exclusion list
      - The exclusion list now updates in realtime
      - Long exclusion lists are now scrollable
      - Added a source column
        - Manual: The quest was manually excluded
        - Automation: The quest was excluded by an automation option
    - The automatic pruning option will now also prune quests excluded via automation options that are no longer in your quest log
  - Fixed
    - Various spanish localization strings

- v1.3.0 - 2022-05-10
  - Added
    - New automation options for automatically abandoning quests of a given type
    - New complete protection option for individual quests
      - When enabled, complete protection will automatically exclude completed quests
      - Complete protection is enabled by default
    - Quest log dailies are now an available qualifier ("daily")
      - Daily dungeon quests are now also considered quest log dailies
    - New messaging rate option for adjusting how chatty Reckless Abandon is
  - Fixed
    - Abandoning quests with the qualifier "failed" will correctly prompt for confirmation when confirm group abandons is enabled

- v1.2.2 - 2022-03-24
  - Fixed
    - Refresh config gui on cli change
    - Rare instances of lua errors when accepting quests very quickly via addons like AutoTurnIn or Leatrix Plus
  - Changed
    - Bump TOC for 2.5.4
  - Removed
    - Deprecated code utilities

- v1.2.1 - 2021-09-09
  - Fixed
    - An issue where failed quests were not being abandoned automatically when configured
    - An issue where addon messages for abandoned failed quests were triggered multiple times
  - Changed
    - Updated TOC for 2.5.2
  - Removed