@@ -1,6 +1,6 @@
 ## Interface: 20504
 ## Author: Arrila-Thrall (US)
-## Version: 1.4.1
+## Version: 1.5.0-beta.1
 ## Title: |cFF80528CReckless Abandon|r |cFF3CE13FBC Classic|r
 ## Notes: A tool for quickly (and recklessly) abandoning quests
 ## SavedVariables: RecklessAbandonClassicDB, RecklessAbandonClassicPrivateDB
